# bridge-straw-effects

./: .gitignore  .markdownlint.json  README.md  pyproject.toml
data/: README.md
data/processed/: README.md  df_filtered_5years.xlsx  imputed_df.xlsx  prefecuture_code.csv  region_code.csv
data/raw/: README.md  df.csv  df.xlsx  taxable_income_full.csv
docs/: .gitignore  Makefile  README.md  akiya_20250114.docx  paper.md  ~$iya_20250114.docx
docs/figures/: README.md
docs/manuscript/: README.md  consultation.md  define_models.md  description_of_data.md  introduction.md  manuscript.md  outlier_detection_method.md  output.docx  problem.md  references.md  results.md  style.css
docs/marp/: 2024-11-11-presentation.md
docs/presentation/: .markdownlint.json  2024-11-11-presentation.md  2024-11-18-waseda-presentation.md  presentation-akiya-2025-01-19.md  style.css
docs/tables/: result.md  tables.xlsx
docs/tex/: main.tex
references/: README.md  references.md
results/: README.md
src/: econometrics.ipynb
src/analysis/: README.md  bayse_model.ipynb  calc_log_exp.ipynb  classical.ipynb  dynamic_interpreter.ipynb  dynamic_twfe.ipynb  evalue_posterior.ipynb  fully_saturated.py  fully_saturated_interpretation.ipynb  fully_saturated_twfe.ipynb  fully_vs_dynamic.ipynb  glm.ipynb  hierarchical_bayesian_model.ipynb  leverage.ipynb  lm.ipynb  placebo_test.ipynb  residuals_of_fixedeffects.ipynb  script.ipynb  twfe.ipynb  var_and_pop.ipynb
src/analysis/5years/: bm_nomal.ipynb  bm_t.ipynb  glm.ipynb  glmm.ipynb  lm.ipynb  (+3 more)
src/data_cleaning/: README.md  add_year.ipynb  clean_region_code.ipynb  cpi_deflator.ipynb  delete_same_rows.ipynb  df_to_every_5_year.ipynb  exclude_too_far_islands.ipynb  fillter.ipynb  find_NaN_from_data.ipynb  get_NaN_from_data.ipynb  get_area.ipynb  get_distance.ipynb  get_islands_list.ipynb  get_scm_df.ipynb  knn.ipynb  log_standardize.py  make_df_minus_mean.ipynb  merge.py  merge_income.ipynb  remove_already_treated.ipynb
src/visualization/: README.md  area_and_stddev.ipynb  gamma_dist.ipynb  income_distribution.ipynb  leverage.ipynb  population_distribution.ipynb  population_distribution.py  simulation_twfe.ipynb  treatment_group.ipynb  year_mean.ipynb
(+99 files in other folders)
