[tool.poetry]
name = "bridge-straw-effects"
version = "0.1.0"
description = ""
authors = ["Keisei Akiya <keisei.akiya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
numpy = "^1.21.0"
matplotlib = "3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.3"
pymc = "^5.16.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
