[tool.poetry]
name = "bridge-straw-effects"
version = "0.1.0"
description = ""
authors = ["Keisei Akiya <keisei.akiya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = ">=1.3.5,<=2.2"
numpy = "^1.21.0"
matplotlib = "3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.3"
pymc = "^5.16.2"
arviz = "^0.20.0"
scipy = "^1.14.1"
pytensor = "^2.25.4"
jax = "^0.4.33"
numba = "^0.60.0"
graphviz = "^0.20.3"
numpyro = "^0.15.3"
jaxlib = "^0.4.33"
ipywidgets = "^8.1.5"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
psmpy = "^0.3.13"
pymer4 = "^0.8.2"
gpboost = "^1.5.1"
patsy = "^0.5.6"
tensorflow = "^2.17.0"
pyarrow = "^17.0.0"
polars = "^1.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
