[tool.poetry]
name = "bridge-treatment-effects"
version = "0.1.0"
description = ""
authors = ["Keisei Akiya <keisei.akiya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
arviz = "^0.20.0"
graphviz = "^0.20.3"
gpboost = "^1.5.1"
japanize-matplotlib = "^1.1.3"
jax = "^0.4.33"
jaxlib = "^0.4.33"
jupyter = "^1.1.1"
matplotlib = "3.9.2"
numpy = "^1.21.0"
numpyro = "^0.15.3"
openpyxl = "^3.1.5"
pandas = ">=1.3.5,<=2.2"
patsy = "^0.5.6"
pymc = "^5.16.2"
pymc-experimental = "^0.1.3"
pytensor = "^2.25.4"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.3"
pyarrow = "^18.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
